--- a/main/res/values/strings.xml
+++ b/main/res/values/strings.xml
@@ -10,7 +10,7 @@
     <string name="group">RCS2405A</string>
     <string name="syafiqname">Mohammed Syafiq Bin Affandy</string>
     <string name="syafiqid">2019711739</string>
-    <string name="url">www.github.com</string>
+    <string name="url">Click Here: My GitHub</string>
 
 
     <string-array name="type">
